basic implementation of the basic shapes, as well as a distance visitor for everything. found a neat system of piling 'Nodes' into arbitrary trees by way of std::variant and a vector<Node> of children. this works because you can have a vector of an incomplete type declared!
tested, working so far. much cleanup to be done.

--- a/steply/steply.vcxproj
+++ b/steply/steply.vcxproj
@@ -157,8 +157,11 @@
     <ClCompile Include="src\sdfBox.ixx" />
     <ClCompile Include="src\sdfCone.ixx" />
     <ClCompile Include="src\sdfIntersect.ixx" />
+    <ClCompile Include="src\sdflib.ixx" />
     <ClCompile Include="src\sdfSphere.ixx" />
+    <ClCompile Include="src\sdfSubtract.ixx" />
     <ClCompile Include="src\sdfTorus.ixx" />
+    <ClCompile Include="src\sdfUnion.ixx" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
