--- a/steply/steply.vcxproj.filters
+++ b/steply/steply.vcxproj.filters
@@ -42,5 +42,14 @@
     <ClCompile Include="src\sdfIntersect.ixx">
       <Filter>Header Files\operators</Filter>
     </ClCompile>
+    <ClCompile Include="src\sdfUnion.ixx">
+      <Filter>Header Files\operators</Filter>
+    </ClCompile>
+    <ClCompile Include="src\sdfSubtract.ixx">
+      <Filter>Header Files\operators</Filter>
+    </ClCompile>
+    <ClCompile Include="src\sdflib.ixx">
+      <Filter>Header Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
