mostly working version based on variants. seems ok, although its not really any more extensible than the inheritance version. The issue here is that all the node types need to sit together in a variant<...> and there are actually several variants that need to be defined for AbsNode, which means we cant spread the types in with a parameter pack, because it could never divide them into the appropriate groups.

--- a/steply/steply.vcxproj
+++ b/steply/steply.vcxproj
@@ -152,8 +152,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="move.ixx" />
+    <ClCompile Include="src\AbstractNode.ixx" />
+    <ClCompile Include="src\distanceVisitor.ixx" />
     <ClCompile Include="src\imvec.ixx" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\round.ixx" />
     <ClCompile Include="src\sdfBox.ixx" />
     <ClCompile Include="src\sdfCone.ixx" />
     <ClCompile Include="src\sdfIntersect.ixx" />
