--- a/steply/steply.vcxproj
+++ b/steply/steply.vcxproj
@@ -153,6 +153,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\AbstractNode.ixx" />
+    <ClCompile Include="src\repeat.ixx" />
+    <ClCompile Include="src\sdfCapsule.ixx" />
     <ClCompile Include="src\distanceVisitor.ixx" />
     <ClCompile Include="src\imvec.ixx" />
     <ClCompile Include="src\main.cpp" />
@@ -160,6 +162,8 @@
     <ClCompile Include="src\round.ixx" />
     <ClCompile Include="src\sdfBox.ixx" />
     <ClCompile Include="src\sdfCone.ixx" />
+    <ClCompile Include="src\sdfCylinder.ixx" />
+    <ClCompile Include="src\sdfHexPrism.ixx" />
     <ClCompile Include="src\sdfIntersect.ixx" />
     <ClCompile Include="src\sdflib.ixx" />
     <ClCompile Include="src\sdfNode.ixx" />
