fixed up the OpenGL setup for a really basic front end.
made a test object, passed it to the imGui visitor.
current approach is with a virtual class (IEditor) which lets us sorta separate the GUI backend (IMGUI) from the shape specific data in each sdf item. I could have done it differently, by importing all known shapes into a module, then defining the edit functions for each in that location, but that felt worse to me than this version... however its the case that some pure geometric shapes DO need some very basic info about how the GUI works

--- a/steply/steply.vcxproj.filters
+++ b/steply/steply.vcxproj.filters
@@ -84,5 +84,28 @@
     <ClCompile Include="imguiVisitor.ixx">
       <Filter>Header Files\visitors</Filter>
     </ClCompile>
+    <ClCompile Include="src\OGL.cpp">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\AbstractEditor.ixx">
+      <Filter>Header Files</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="src\glext.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\khrplatform.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\OGL.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\wglext.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\guiDef.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
