--- a/steply/steply.vcxproj
+++ b/steply/steply.vcxproj
@@ -90,7 +90,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpplatest</LanguageStandard>
+      <LanguageStandard>stdcpp17</LanguageStandard>
       <AdditionalIncludeDirectories>C:\Users\Noah\source\repos\steply\imgui\backends;C:\Users\Noah\source\repos\steply\imgui;C:\Users\Noah\source\repos\steply\imvec\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ScanSourceForModuleDependencies>true</ScanSourceForModuleDependencies>
     </ClCompile>
@@ -108,7 +108,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpplatest</LanguageStandard>
+      <LanguageStandard>stdcpp17</LanguageStandard>
       <AdditionalIncludeDirectories>C:\Users\Noah\source\repos\steply\imgui\backends;C:\Users\Noah\source\repos\steply\imgui;C:\Users\Noah\source\repos\steply\imvec\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ScanSourceForModuleDependencies>true</ScanSourceForModuleDependencies>
       <Optimization>MaxSpeed</Optimization>
@@ -127,7 +127,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpplatest</LanguageStandard>
+      <LanguageStandard>stdcpp17</LanguageStandard>
       <AdditionalIncludeDirectories>C:\Users\Noah\source\repos\steply\imgui\backends;C:\Users\Noah\source\repos\steply\imgui;C:\Users\Noah\source\repos\steply\imvec\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ScanSourceForModuleDependencies>true</ScanSourceForModuleDependencies>
       <LanguageStandard_C>Default</LanguageStandard_C>
@@ -146,7 +146,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <LanguageStandard>stdcpplatest</LanguageStandard>
+      <LanguageStandard>stdcpp17</LanguageStandard>
       <AdditionalIncludeDirectories>C:\Users\Noah\source\repos\steply\imgui\backends;C:\Users\Noah\source\repos\steply\imgui;C:\Users\Noah\source\repos\steply\imvec\src;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <ScanSourceForModuleDependencies>true</ScanSourceForModuleDependencies>
       <Optimization>MaxSpeed</Optimization>
@@ -160,31 +160,32 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="imguiVisitor.ixx" />
-    <ClCompile Include="src\DynamicShader.ixx" />
-    <ClCompile Include="src\glslVisitor.ixx" />
+    <ClCompile Include="imguiVisitor.hpp" />
+    <ClCompile Include="src\DynamicShader.hpp" />
+    <ClCompile Include="src\glslVisitor.hpp" />
     <ClCompile Include="src\GL_VERSION_2_0.cpp" />
     <ClCompile Include="src\GL_VERSION_3_0.cpp" />
     <ClCompile Include="src\OGL.cpp" />
-    <ClCompile Include="src\previewShader.ixx" />
-    <ClCompile Include="src\repeat.ixx" />
-    <ClCompile Include="src\sdfCapsule.ixx" />
-    <ClCompile Include="src\distanceVisitor.ixx" />
-    <ClCompile Include="src\imvec.ixx" />
+    <ClCompile Include="src\previewShader.cpp" />
+    <ClCompile Include="src\previewShader.h" />
+    <ClCompile Include="src\repeat.hpp" />
+    <ClCompile Include="src\sdfCapsule.hpp" />
+    <ClCompile Include="src\distanceVisitor.hpp" />
     <ClCompile Include="src\main.cpp" />
-    <ClCompile Include="src\move.ixx" />
-    <ClCompile Include="src\round.ixx" />
-    <ClCompile Include="src\sdfBox.ixx" />
-    <ClCompile Include="src\sdfCone.ixx" />
-    <ClCompile Include="src\sdfCylinder.ixx" />
-    <ClCompile Include="src\sdfHexPrism.ixx" />
-    <ClCompile Include="src\sdfIntersect.ixx" />
-    <ClCompile Include="src\sdflib.ixx" />
-    <ClCompile Include="src\sdfSphere.ixx" />
-    <ClCompile Include="src\sdfSubtract.ixx" />
-    <ClCompile Include="src\sdfTorus.ixx" />
-    <ClCompile Include="src\sdfUnion.ixx" />
-    <ClCompile Include="src\string_helpers.ixx" />
+    <ClCompile Include="src\move.hpp" />
+    <ClCompile Include="src\round.hpp" />
+    <ClCompile Include="src\sdfBox.hpp" />
+    <ClCompile Include="src\sdfCone.hpp" />
+    <ClCompile Include="src\sdfCylinder.hpp" />
+    <ClCompile Include="src\sdfHexPrism.hpp" />
+    <ClCompile Include="src\sdfIntersect.hpp" />
+    <ClCompile Include="src\sdflib.hpp" />
+    <ClCompile Include="src\sdfSphere.hpp" />
+    <ClCompile Include="src\sdfSubtract.hpp" />
+    <ClCompile Include="src\sdfTorus.hpp" />
+    <ClCompile Include="src\sdfUnion.hpp" />
+    <ClCompile Include="src\string_helpers.cpp" />
+    <ClCompile Include="src\string_helpers.h" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\glext.h" />
